<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="22dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.nirajparajuli0.fitnessmonitoring.MainActivity"
    android:background="#FFFFFF"
    android:backgroundTint="#8FFFFFFF"
    android:backgroundTintMode="src_over"
    android:id="@+id/TableConfidence">

    <TableRow
        android:id="@+id/walking_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="22dp">

        <TextView
            android:id="@+id/walking_title"
            android:text="@string/walking"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/black"/>

        <TextView android:id="@+id/walking_prob"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/black"/>
    </TableRow>

    <TableRow
        android:id="@+id/jogging_row"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="22dp">

        <TextView
            android:id="@+id/jogging_title"
            android:text="@string/jogging"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/black"/>

        <TextView android:id="@+id/jogging_prob"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/black"/>
    </TableRow>

    <TableRow
        android:id="@+id/sitting_row"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="22dp">

        <TextView
            android:id="@+id/sitting_title"
            android:text="@string/sitting"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/black"/>

        <TextView android:id="@+id/sitting_prob"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/black"/>
    </TableRow>

    <TableRow
        android:id="@+id/standing_row"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="22dp">

        <TextView
            android:id="@+id/standing_title"
            android:text="@string/standing"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/black"/>

        <TextView android:id="@+id/standing_prob"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/black"/>
    </TableRow>

    <TableRow
        android:id="@+id/downstairs_row"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="22dp">

        <TextView
            android:id="@+id/downstairs_title"
            android:layout_weight="1"
            android:text="@string/downstairs"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/downstairs_prob"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/black"/>
    </TableRow>

    <TableRow
        android:id="@+id/upstairs_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="22dp">

        <TextView
            android:id="@+id/upstairs_title"
            android:text="@string/upstairs"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/black"/>

        <TextView android:id="@+id/upstairs_prob"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:textColor="@color/black"/>
    </TableRow>

    <ImageButton
        android:id="@+id/stop"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:src="@drawable/back"
        android:onClick="goBack"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:padding="15dp"
        android:layout_alignParentRight="true"/>

</TableLayout>
